--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
 	<div class="container">
 		<h1 align="center">Welcome to GetPIDs.com</h1>
 		<h5> A PID story</h5>
-		<p> Your friend spent hours getting their quad amazingly locked in.  The thing flies like it's on rails, it feels like a totally different vehicle!  So you say, "Hey man, let me get your pids!".  Your buddy gladly hands over the settings, you plug them in to BetaFlight configurator and go out for a test flight with a smile ear to ear.  Flick on that arm switch and go for your first flip and... Woah, what is this overshoot and wobble? The motors are burning hot and sound like they are screeching. Your quad flies like crap...  This might even feel worse than defaults!  How can one quad fly great and another like trash using the same numbers? What gives?!</p>
+		<p> Your friend spent hours getting their quad amazingly locked in and now the thing flies like it's on rails! So you say, "Hey man, let me get your pids!".  Your buddy gladly hands over the settings, you plug them in to BetaFlight configurator and go out for a test flight with a smile ear to ear.  Flick on that arm switch, go for your first flip and... Woah, what is this overshoot and wobble? The motors are burning hot and sound like they are screeching. Your quad flies like crap...  This might even feel worse than defaults!  How can one quad fly great and another like trash using the same numbers? What gives?!</p>
 
-		<p> P, I, and D gains are set based on YOUR specific system.  These are the numbers that tell your flight controller how hard your motors can push, how much momentum your vehicle carries, when to slow rotations down so you don't overshoot, how long it takes your motors to get up to speed, and more. They aren't magic numbers that define how any old system will fly, they are custom tuned to match your specific configuration of hardware.  If you use PIDs that were tuned for someone else's quad, you're basically lying to your flight controller and telling it it's attached to a quad with the same setup as that other vehicle.  The hardware doesn't perform exactly the same, and you told it to expect that it should, no wonder it flies so weird!  If your freind's motors have more or less torque than yours, that's a different system.  Is the frame shape different? That's a different system. Does the weight of any of the components vary from their's? You guessed it, totally different system.  What you need is a custom tune for YOUR hardware, and you've come to the right place.</p>
+		<p>P, I, and D gains are set based on YOUR specific system.  These numbers are how you tell your flight controller what motors, props, frame, etc. it's attached to.  They aren't magic numbers that define how any old system will fly, they are numbers you adjust to custom match YOUR specific configuration of hardware.  If you use PIDs that were tuned for someone else's quad, you're basically lying to your flight controller and telling it it's attached to a different quad.  The hardware doesn't perform exactly the same, and you told it to expect that it should, no wonder it flies so weird! <p>
+		<p>If your friend's motors have more or less torque than yours, that's a different system.  Is the frame shape different? That's a different system. Does the weight of any of the components vary from their's? You guessed it, totally different system.  What you need is a custom tune for YOUR hardware, and you've come to the right place.</p>
 		
 		</br>
 		<h5> What is GetPIDs?</h5>
@@ -51,11 +52,12 @@
 		
 		</br>
 		<h5>Keep me up to date!</h5>
-		<p>GetPIDs is still under construction.  We're working hard to test lots of different vechicle configurations and working with some of the top pilots in the world to make sure we can provide you with the best tune possible with the least ammount of headache.  If you're interested in knowing when the product is live or want first dibs on beat testing opportunities, sign up with your email below.  (I hate spam just as much or more than the next guy and will NOT ever sell your information or send you needless spammy emails.)<p>
+		<p>GetPIDs is still under construction.  We're working hard to test lots of different vechicle configurations and working with some of the top pilots and PID tuners in the world to make sure we can provide you with the best tune possible with the least ammount of headache.  If you're interested in knowing when the product is live or want first dibs on beta testing opportunities, sign up with your email below.  (I hate spam just as much or more than the next guy and will NEVER sell your information or send you needless spammy emails.)<p>
 		<p>- Name<p>
 		<p>- Pilot Handle<p>
 		<p>- email address<p>
 		<p>- do you have blackbox logging capabilities?<p>
+		<p>- do you do more racing or freestyle?<p>
 		<p>[Submit]<p>
 	</div>
 	
