--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 	<script type="text/javascript">
 		$('#gform').on('submit', function(e) {
 		  $('#gform *').fadeOut(2000);
-		  $('#gform').prepend('Thank you for your submission!');
+		  $('#gform').prepend('<h1>Thank you for your submission!<h1> <h5>We will get back to you with any news on the project soon<h5>');
 		  });
 	</script>
 
