--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
       crossorigin="anonymous"
     />
     <title>GetPIDs.com</title>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-DZWEK3LPW3"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-DZWEK3LPW3');
+	</script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
