--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     />
     <title>GetPIDs.com</title>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-DZWEK3LPW3"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-2T3HGPW3C9"></script>
 	<script>
 	  window.dataLayer = window.dataLayer || [];
 	  function gtag(){dataLayer.push(arguments);}
 	  gtag('js', new Date());
 
-	  gtag('config', 'G-DZWEK3LPW3');
+	  gtag('config', 'G-2T3HGPW3C9');
 	</script>
   </head>
   <body>
